* segway: more informative error message when supervision labels overlap each other
* segway-layer: add --bigBed option, which works if you have
  bedToBigBed in your path
* segway: add --bigBed option which calls segway-layer --bigBed
* segway-layer: fix issue #19. Now doesn't override previous colors
  when mnemonics aren't supplied (thanks to Jay Hesselberth)
* installation: always require drmaa. setuptools extras_require wasn't that useful in practice
* test: when files differ, output is in a form that makes it easier to diff

1.1.0:

* segway: now again includes posterior output in bedGraph format
  (thanks to Avinash Sahu)
* segway: --old-directory renamed to --recover
* segway: --recover now supports identify as well as train. less
  clunky and more consistent than the old recipe for training recovery
  included in the docs (posterior still not supported)
* segway: train.tab is now optional, so you should be able to run
  identify on pre-Segway 1.0.0 training directories that don't have
  it, as long as you specify all the same options as you did before
* segway-winner: new command to pick winning parameters in interrupted training run
* segway: train.tab now includes input master filename in multi-instance training
* segway: changed memory progression edge error to be more easily understandable
* segway: when some error kills one training instance, there is now a more detailed error at end
* segway: remove --keep-going, which hasn't done anything in a few versions
* test: filenames are sorted before comparisons
* test: now includes posterior test
* test/README: added description of test system
* test: training now only goes through two rounds to speed the tests

1.0.2:

* segway: train.tab is now sorted for easier test comparison
* segway: eliminate reporting of "info criterion" (which was flaky) in likelihood.tab
* test: automated testing framework in test/test.sh

1.0.1:

* segway: fix various option setup errors
* setup: add description