@@ -43,7 +43,7 @@
 % supervision label
 #ifndef CARD_SUPERVISIONLABEL
 #define CARD_SUPERVISIONLABEL $card_supervisionLabel
-#endif CARD_SUPERVISIONLABEL
+#endif
 
 % AA .. TT
 #define CARD_DINUCLEOTIDE 16
