@@ -18,7 +18,7 @@
 @@@!!!TRIFILE_END_OF_ID_STRING!!!@@@ 
 
 % ---
-% GMTK Triangulation File Created: Thursday August 04 2011, 15:53:39 PDT
+% GMTK Triangulation File Created: Friday August 05 2011, 10:54:06 PDT
 % Options-: triangulationHeuristic: completed, jtWeight: T, jtwUB: F, jtwPUI: 0.000000, jtwMC: F, jtwSNSC: 1.000000, jtwDNSC: 1.000000, pfCobWeight: 0.000000, findBestBoundary: T, traverseFraction: 1.000000, noBoundaryMemoize: F, forceLeftRight: , boundaryHeuristic: S, 
 % ---
 
